docs/v1.5.0.2/_sources/gallery/clad/radomize_core.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/clad/radomize_core.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_clad_radomize_core.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_clad_radomize_core.py:


Effect of core randomization
============================

.. GENERATED FROM PYTHON SOURCE LINES 7-28

.. code-block:: Python

    from FiberFusing.configuration.line import FusedProfile_02x02 as FusedProfile
    from PyOptik import MaterialBank

    material = MaterialBank.fused_silica

    wavelength = 15.5e-6

    structure = FusedProfile(
        fiber_radius=62.5e-6,
        fusion_degree=0.1,
        index=material.compute_refractive_index(wavelength),
    )


    for factor in [0, 10e-6]:
        structure.randomize_core_position(random_factor=factor)

        structure.plot(show_centers=True, show_cores=True)


    # -


.. _sphx_glr_download_gallery_clad_radomize_core.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: radomize_core.ipynb <radomize_core.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: radomize_core.py <radomize_core.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: radomize_core.zip <radomize_core.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
