docs/v1.5.0.4/_sources/gallery/clad/radomize_core.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/clad/radomize_core.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_clad_radomize_core.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_clad_radomize_core.py:


Effect of core randomization
============================

.. GENERATED FROM PYTHON SOURCE LINES 7-20

.. code-block:: Python

    from FiberFusing.configuration.line import FusedProfile_02x02 as FusedProfile
    from PyOptik import MaterialBank

    material = MaterialBank.fused_silica

    wavelength = 15.5e-6

    structure = FusedProfile(
        fiber_radius=62.5e-6,
        fusion_degree=0.1,
        index=material.compute_refractive_index(wavelength),
    )





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /opt/hostedtoolcache/Python/3.11.10/x64/lib/python3.11/site-packages/PyOptik/material/base_class.py:60: UserWarning: Wavelength range goes from 15.5 µm to 15.5 µm which is outside the allowable range of 209.99999999999997 nm to 6.7 µm µm. [Material: fused_silica]
      warnings.warn(




.. GENERATED FROM PYTHON SOURCE LINES 21-25

.. code-block:: Python

    factor = 0
    structure.randomize_core_position(random_factor=factor)
    structure.plot(show_centers=True, show_cores=True)




.. image-sg:: /gallery/clad/images/sphx_glr_radomize_core_001.png
   :alt: Fiber structure
   :srcset: /gallery/clad/images/sphx_glr_radomize_core_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Axes: title={'center': 'Fiber structure'}, xlabel='x-distance [m]', ylabel='y-distance [m]'>



.. GENERATED FROM PYTHON SOURCE LINES 26-30

.. code-block:: Python

    factor = 10e-6
    structure.randomize_core_position(random_factor=factor)
    structure.plot(show_centers=True, show_cores=True)




.. image-sg:: /gallery/clad/images/sphx_glr_radomize_core_002.png
   :alt: Fiber structure
   :srcset: /gallery/clad/images/sphx_glr_radomize_core_002.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Axes: title={'center': 'Fiber structure'}, xlabel='x-distance [m]', ylabel='y-distance [m]'>



.. GENERATED FROM PYTHON SOURCE LINES 31-34

.. code-block:: Python

    factor = 10e-6
    structure.randomize_core_position(random_factor=factor)
    structure.plot(show_centers=True, show_cores=True)



.. image-sg:: /gallery/clad/images/sphx_glr_radomize_core_003.png
   :alt: Fiber structure
   :srcset: /gallery/clad/images/sphx_glr_radomize_core_003.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Axes: title={'center': 'Fiber structure'}, xlabel='x-distance [m]', ylabel='y-distance [m]'>




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 2.823 seconds)


.. _sphx_glr_download_gallery_clad_radomize_core.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: radomize_core.ipynb <radomize_core.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: radomize_core.py <radomize_core.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: radomize_core.zip <radomize_core.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
